--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto-Final-C3
 endorsed.classpath=
 excludes=
 file.reference.gson-2.8.2.jar=libs\\gson-2.8.2.jar
+file.reference.itext5-itextpdf-5.5.12.jar=libs\\itext5-itextpdf-5.5.12.jar
 file.reference.ojdbc8.jar=libs\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
